refractor(country): storage in sql migrated to json refractor(country): countries now have an id that is set when created feat(json): location reader and wrapper in JsonUtil